k8s/ingesta/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ingesta-service
  namespace: student-TU_USUARIO
spec:
  selector:
    app: ingesta
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
  type: ClusterIP
