k8s/ingesta/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingesta-aamonsalve
  namespace: student-aamonsalve
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    external-dns.alpha.kubernetes.io/target: proxy.inf.uct.cl
spec:
  ingressClassName: nginx
  rules:
  - host: ingesta-aamonsalve.dev.censei.cl
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ingesta-service
            port:
              number: 8000
